--- a/RockPaperScissorsApp/e2e/tsconfig.json
+++ b/RockPaperScissorsApp/e2e/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
+    "experimentalDecorators": true,
     "target": "es2018",
     "types": [
       "jasmine",
